strucutre is ok but js is not working

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="/lovable-uploads/7258331e-a5b7-4d2f-8241-261b70727637.png" alt="Unibytes Logo" class="logo-img">
+                <img src="Assets/image/Unibytes Horizontal.svg" alt="Unibytes Logo" class="logo-img">
             </div>
 
             <!-- Desktop Navigation -->
@@ -84,7 +84,7 @@
         
         <div class="hero-content">
             <div class="hero-logo">
-                <img src="/lovable-uploads/d2380e2b-8781-4fe9-bf31-8a3b23602978.png" alt="Unibytes - Unifying excellence in every byte" class="hero-logo-img">
+                <img src="Assets/image/Unibytes Full.svg" alt="Unibytes - Unifying excellence in every byte" class="hero-logo-img">
             </div>
             <h1 class="hero-title">
                 Welcome to <span class="text-primary">UNIBYTES</span>
