member page bug fix and box-shadow in that.

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 
                 <div class="team-card">
                     <div class="member-avatar">
-                        <div class="avatar-placeholder"><!--<img src="path/to/avatar.jpg" alt="Avatar">-->></div>
+                        <div class="avatar-placeholder"><!--<img src="path/to/avatar.jpg" alt="Avatar">--></div>
                     </div>
                     <h3>Nikest Basnet</h3>
                     <p class="member-role">........</p>
