feat: contact pages

--- a/index.html
+++ b/index.html
@@ -302,11 +302,11 @@
                         </div>
                         <div class="contact-item">
                             <strong>📱 Phone:</strong>
-                            <span>+91 98765 43210</span>
+                            <span>+977 9806459112</span>
                         </div>
                         <div class="contact-item">
                             <strong>📍 Location:</strong>
-                            <span>Tech College Campus, Innovation Hub</span>
+                            <span>New Baneshwor, Kathmandu</span>
                         </div>
                     </div>
                 </div>
